k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-example-deployment
  labels:
    app: node-example
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-example
  template:
    metadata:
      labels:
        app: node-example
    spec:
      containers:
        - name: node-example
          image: gabrielmelogm/node-example:latest
          ports:
            - containerPort: 3000
