k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-example-service
spec:
  selector:
    app: node-example
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 3000
