k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: node-example-ingress
spec:
  rules:
    - host: "node-example.test.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: node-example-service
                port:
                  number: 8080
